@@ -6,6 +6,7 @@ import static com.flipkart.krystal.krystex.kryon.KryonExecutor.GraphTraversalStr
 import static com.flipkart.krystal.krystex.kryon.KryonExecutor.KryonExecStrategy.BATCH;
 import static com.flipkart.krystal.krystex.kryon.KryonExecutor.KryonExecStrategy.GRANULAR;
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
+import static java.util.Collections.emptySet;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static java.util.function.Function.identity;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -24,7 +25,6 @@ import com.flipkart.krystal.krystex.kryon.KryonExecutor.KryonExecStrategy;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
@@ -74,8 +74,8 @@ class KryonExecutorTest {
     KryonDefinition kryonDefinition =
         kryonDefinitionRegistry.newKryonDefinition(
             "kryon",
-            newComputeLogic(
-                    "kryonLogic", Collections.emptySet(), dependencyValues -> "computed_value")
+            emptySet(),
+            newComputeLogic("kryonLogic", emptySet(), dependencyValues -> "computed_value")
                 .kryonLogicId());
 
     CompletableFuture<Object> future1 =
@@ -102,8 +102,8 @@ class KryonExecutorTest {
     KryonDefinition kryonDefinition =
         kryonDefinitionRegistry.newKryonDefinition(
             "kryon",
-            newComputeLogic(
-                    "kryonLogic", Collections.emptySet(), dependencyValues -> "computed_value")
+            emptySet(),
+            newComputeLogic("kryonLogic", emptySet(), dependencyValues -> "computed_value")
                 .kryonLogicId());
 
     CompletableFuture<Object> future1 =
@@ -128,8 +128,8 @@ class KryonExecutorTest {
     KryonDefinition kryonDefinition =
         kryonDefinitionRegistry.newKryonDefinition(
             "kryon",
-            newComputeLogic(
-                    "kryonLogic", Collections.emptySet(), dependencyValues -> "computed_value")
+            emptySet(),
+            newComputeLogic("kryonLogic", emptySet(), dependencyValues -> "computed_value")
                 .kryonLogicId());
 
     CompletableFuture<Object> future =
@@ -152,6 +152,7 @@ class KryonExecutorTest {
         kryonDefinitionRegistry
             .newKryonDefinition(
                 logicId,
+                Set.of("a", "b", "c"),
                 newComputeLogic(
                         logicId,
                         Set.of("a", "b", "c"),
@@ -181,16 +182,17 @@ class KryonExecutorTest {
     KryonDefinition n1 =
         kryonDefinitionRegistry.newKryonDefinition(
             "n1",
-            newComputeLogic(
-                    "n1_logic", Collections.emptySet(), dependencyValues -> "dependency_value")
+            emptySet(),
+            newComputeLogic("n1_logic", emptySet(), dependencyValues -> "dependency_value")
                 .kryonLogicId());
 
     KryonDefinition n2 =
         kryonDefinitionRegistry.newKryonDefinition(
             "n2",
+            emptySet(),
             newComputeLogic(
                     "n2_logic",
-                    ImmutableSet.of("dep"),
+                    Set.of("dep"),
                     dependencyValues ->
                         dependencyValues
                                 .getDepValue("dep")
@@ -219,17 +221,19 @@ class KryonExecutorTest {
     String l1Dep = "requestExecution_multiLevelDependencies_level1";
     kryonDefinitionRegistry.newKryonDefinition(
         l1Dep,
-        newComputeLogic(l1Dep, Collections.emptySet(), dependencyValues -> "l1").kryonLogicId());
+        emptySet(),
+        newComputeLogic(l1Dep, emptySet(), dependencyValues -> "l1").kryonLogicId());
 
     String l2Dep = "requestExecution_multiLevelDependencies_level2";
     kryonDefinitionRegistry.newKryonDefinition(
         l2Dep,
+        emptySet(),
         newComputeLogic(
                 l2Dep,
-                ImmutableSet.of("input"),
+                Set.of("dep"),
                 dependencyValues ->
                     dependencyValues
-                            .getDepValue("input")
+                            .getDepValue("dep")
                             .values()
                             .values()
                             .iterator()
@@ -238,17 +242,18 @@ class KryonExecutorTest {
                             .orElseThrow()
                         + ":l2")
             .kryonLogicId(),
-        ImmutableMap.of("input", new KryonId(l1Dep)));
+        ImmutableMap.of("dep", new KryonId(l1Dep)));
 
     String l3Dep = "requestExecution_multiLevelDependencies_level3";
     kryonDefinitionRegistry.newKryonDefinition(
         l3Dep,
+        emptySet(),
         newComputeLogic(
                 l3Dep,
-                ImmutableSet.of("input"),
+                Set.of("dep"),
                 dependencyValues -> {
                   return dependencyValues
-                          .getDepValue("input")
+                          .getDepValue("dep")
                           .values()
                           .values()
                           .iterator()
@@ -258,17 +263,18 @@ class KryonExecutorTest {
                       + ":l3";
                 })
             .kryonLogicId(),
-        ImmutableMap.of("input", new KryonId(l2Dep)));
+        ImmutableMap.of("dep", new KryonId(l2Dep)));
 
     String l4Dep = "requestExecution_multiLevelDependencies_level4";
     kryonDefinitionRegistry.newKryonDefinition(
         l4Dep,
+        emptySet(),
         newComputeLogic(
                 l4Dep,
-                ImmutableSet.of("input"),
+                Set.of("dep"),
                 dependencyValues ->
                     dependencyValues
-                            .getDepValue("input")
+                            .getDepValue("dep")
                             .values()
                             .values()
                             .iterator()
@@ -277,7 +283,7 @@ class KryonExecutorTest {
                             .orElseThrow()
                         + ":l4")
             .kryonLogicId(),
-        ImmutableMap.of("input", new KryonId(l3Dep)));
+        ImmutableMap.of("dep", new KryonId(l3Dep)));
 
     Facets facets = Facets.empty();
     CompletableFuture<Object> future =
@@ -285,12 +291,13 @@ class KryonExecutorTest {
             kryonDefinitionRegistry
                 .newKryonDefinition(
                     "requestExecution_multiLevelDependencies_final",
+                    emptySet(),
                     newComputeLogic(
                             "requestExecution_multiLevelDependencies_final",
-                            ImmutableSet.of("input"),
+                            Set.of("dep"),
                             dependencyValues ->
                                 dependencyValues
-                                        .getDepValue("input")
+                                        .getDepValue("dep")
                                         .values()
                                         .values()
                                         .iterator()
@@ -299,7 +306,7 @@ class KryonExecutorTest {
                                         .orElseThrow()
                                     + ":final")
                         .kryonLogicId(),
-                    ImmutableMap.of("input", new KryonId(l4Dep)))
+                    ImmutableMap.of("dep", new KryonId(l4Dep)))
                 .kryonId(),
             facets,
             KryonExecutionConfig.builder().executionId("r").build());
@@ -320,6 +327,7 @@ class KryonExecutorTest {
                 kryonDefinitionRegistry
                     .newKryonDefinition(
                         "shutdown_preventsNewExecutionRequests",
+                        ImmutableSet.of(),
                         newComputeLogic(
                                 "shutdown_preventsNewExecutionRequests",
                                 ImmutableSet.of(),
